공통으로 사용할 라이브러리 등록

--- a/common-lib/pom.xml
+++ b/common-lib/pom.xml
@@ -14,5 +14,64 @@
 	<packaging>pom</packaging>
 	<properties>
 		<java.version>1.6</java.version>
+		<servlet.version>2.5</servlet.version>
+		<spring.version>3.1.1.RELEASE</spring.version>
+		<ibatis.version>2.0.8</ibatis.version>
 	</properties>
+
+	<repositories>
+		<!-- Maven Repository -->
+		<repository>
+			<id>maven.repository</id>
+			<name>Another Maven Repository</name>
+			<url>http://repo1.maven.org/maven2/</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<!-- java servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${servlet.version}</version>
+		</dependency>
+
+		<!-- spring core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${ibatis.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-ibatis</artifactId>
+			<version>${ibatis.version}</version>
+		</dependency>
+
+	</dependencies>
 </project>
