--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -12,6 +12,10 @@
 	<artifactId>framework</artifactId>
 	<packaging>jar</packaging>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<artifactId>common-lib</artifactId>
