--- a/common-lib/pom.xml
+++ b/common-lib/pom.xml
@@ -13,18 +13,85 @@
 	<artifactId>common-lib</artifactId>
 	<packaging>pom</packaging>
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
 		<java.version>1.6</java.version>
 		<servlet.version>2.5</servlet.version>
 		<spring.version>3.1.1.RELEASE</spring.version>
 		<ibatis.version>2.0.8</ibatis.version>
+		<slf4j.version>1.6.4</slf4j.version>
+		<xstream.version>1.4.2</xstream.version>
+		<logback.version>1.0.1</logback.version>
+
+		<mavenDependency.plubin.version>2.4</mavenDependency.plubin.version>
 	</properties>
 
 	<repositories>
+		<!-- Spring Milestone Repository -->
+		<repository>
+			<id>spring-milestone</id>
+			<name>Spring Milestone Repository</name>
+			<url>http://maven.springframework.org.s3.amazonaws.com/external</url>
+		</repository>
+		<repository>
+			<id>java.net</id>
+			<url>http://download.java.net/maven/2</url>
+		</repository>
+
 		<!-- Maven Repository -->
 		<repository>
 			<id>maven.repository</id>
 			<name>Another Maven Repository</name>
 			<url>http://repo1.maven.org/maven2/</url>
+		</repository>
+
+		<!-- Another Maven Repository -->
+		<repository>
+			<id>com.mvnrepository</id>
+			<name>Maven Repository</name>
+			<url>http://mvnrepository.com/artifact/</url>
+		</repository>
+		<repository>
+			<id>nexus</id>
+			<name>Nexus Repos</name>
+			<url>https://maven.nuxeo.org/nexus/content/repositories/public</url>
+		</repository>
+		<repository>
+			<id>jboss-maven2-release-repository</id>
+			<name>JBoss Sonatype OSS</name>
+			<url>https://oss.sonatype.org/content/repositories/JBoss</url>
+		</repository>
+		<repository>
+			<id>eaio.com</id>
+			<url>http://eaio.com/maven2</url>
+		</repository>
+
+		<!-- Sonatype Releases -->
+		<repository>
+			<id>sonatype-releases</id>
+			<name>Sonatype Releases</name>
+			<url>https://oss.sonatype.org/content/repositories/releases</url>
+		</repository>
+
+		<!-- Glassfish Snapshots -->
+		<repository>
+			<id>glassfish-maven-repository.dev.java.net</id>
+			<name>GlassFish Maven Repository</name>
+			<url>http://download.java.net/maven/glassfish</url>
+		</repository>
+
+		<!-- Typesafe Repository -->
+		<repository>
+			<id>typesafe</id>
+			<name>Typesafe Repository</name>
+			<url>http://repo.typesafe.com/typesafe/releases/</url>
+		</repository>
+
+		<!-- Spring Releases -->
+		<repository>
+			<id>spring-release</id>
+			<name>Spring Maven Release Repository</name>
+			<url>http://repo.springsource.org/libs-release</url>
 		</repository>
 	</repositories>
 
@@ -41,6 +108,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -72,6 +145,65 @@
 			<artifactId>spring-ibatis</artifactId>
 			<version>${ibatis.version}</version>
 		</dependency>
+		<!-- XStream -->
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>${xstream.version}</version>
+		</dependency>
+
+		<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
 
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<compilerVersion>1.6</compilerVersion>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>${mavenDependency.plubin.version}</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
