--- a/common-lib/pom.xml
+++ b/common-lib/pom.xml
@@ -16,6 +16,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<java.version>1.6</java.version>
+		<jspApi.version>2.1</jspApi.version>
+		<jstl.version>1.2</jstl.version>
 		<servlet.version>2.5</servlet.version>
 		<spring.version>3.1.1.RELEASE</spring.version>
 		<ibatis.version>2.0.8</ibatis.version>
@@ -23,7 +25,9 @@
 		<xstream.version>1.4.2</xstream.version>
 		<logback.version>1.0.1</logback.version>
 
-		<mavenDependency.plubin.version>2.4</mavenDependency.plubin.version>
+		<apacheTiles.version>2.2.2</apacheTiles.version>
+
+		<mavenDependency.plugin.version>2.4</mavenDependency.plugin.version>
 	</properties>
 
 	<repositories>
@@ -152,6 +156,33 @@
 			<version>${xstream.version}</version>
 		</dependency>
 
+		<!-- Apache Tile -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-core</artifactId>
+			<version>${apacheTiles.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>${apacheTiles.version}</version>
+		</dependency>
+
+
+		<!-- JSTL -->
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${jspApi.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -193,7 +224,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>${mavenDependency.plubin.version}</version>
+				<version>${mavenDependency.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
