--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -22,6 +22,12 @@
 			<groupId>com.hnsnmn</groupId>
 			<version>${project.version}</version>
 			<type>pom</type>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
