--- a/web-project/src/main/webapp/WEB-INF/web.xml
+++ b/web-project/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,8 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath:config/spring/applicationContext-properties.xml
+			classpath:config/spring/applicationContext-jdbc.xml
+			classpath:config/spring/applicationContext-common.xml
 		</param-value>
 	</context-param>
 
